--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 							<a href="qeesi.html" ><div class="desc">
 									<div class="con">
 										<h1>QEESI</h1>
-										<span>Redeisgn of online questionnaire</span>
+										<span>Redeisgn of digital questionnaire</span>
 									</div>
 								</div>
 							</div>
@@ -242,7 +242,7 @@
 							<a href="blushup.html"><div class="desc">
 									<div class="con">
 										<h1>Blushup</h1>
-										<span>Redesign of online reservation platforms</span>
+										<span>Redesign of ecommerce platform</span>
 									</div>
 								</div>
 							</div>
