--- a/sap123123.html
+++ b/sap123123.html
@@ -50,19 +50,21 @@
 	For example, imagine that there was an SAP Product where you could store all the information about a TV you manufactured, including the current warranty for the TV (assume this is called “SAP Manufacturing Database”.)  However, the product didn’t have anywhere to handle different versions of the TV warranty.  In this case an SAP Partner built an extension to the product that allowed for the customer to store multiple versions of the TV warranty (assume this is called “Warranty Extender for SAP”.) In this example, “SAP Manufactoring Database” is the type of product that would sell on SAP Store and “Warrenty Extender for SAP” is the type of product that would sell on SAP AppCenter.</p>
 
 	<h2>Challenge</h2>
-	<p class="challenge">"Design the search function for SAP customers by combining SAP Store and SAP AppCenter into one single website"</p>
+	<p class="challenge">"Design the search function for SAP customers on a combined website of SAP Store and SAP AppCenter"</p>
 	
 	<h2>Process</h2>
 	<img src="work/img/sap-process.svg">
 
 	<h2>Understand</h2>
-	<p>Deconstruct the task by answering several questions:
+	<p>Before I started to research SAP Store and AppCenter, I deconstructed the challenge into several questions:</p>
 		<ul>
-			<li>Why is this feature important?</li>
+			<li>Why is search function important?</li>
 			<li>What problem are we trying to solve?</li>
-			<li>How does this product benefit customers?</li> 
+			<li>How does this function benefit customers?</li> 
+			<li>How does this function benefit SAP?</li>
 			<li>What business opportunity does it create?</li>
 		</ul>
+	</p>	
 </section>
 
 
