--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 									<span class="heading-meta">Resume</span>
 									<div class="hire">
 										<h2>Want to know more about me? <br> View my resume below!</h2>
-										<a href="https://drive.google.com/file/d/1fuzmwio_-1LKzmdl5jNvgbxmhACbG5jL/view?usp=sharing" class="btn-hire" target="blank">Take me there<i class="icon-arrow-right-outline"></i></a>
+										<a href="https://drive.google.com/file/d/1fuzmwio_-1LKzmdl5jNvgbxmhACbG5jL/view?usp=sharing" class="btn-hire" target="blank">Take me there</a>
 									</div>
 								</div>
 							</div>
