--- a/sap123123.html
+++ b/sap123123.html
@@ -55,8 +55,8 @@
 	<h2>Process</h2>
 	<img src="work/img/sap-process.svg">
 
-	<h2>Understand</h2>
-	<p>Before I started to research SAP Store and AppCenter, I deconstructed the challenge into several questions:</p>
+	<h2>Understand - Challenge</h2>
+	<p>In order to better understand the challenge, I deconstructed the challenge into several questions:</p>
 		<ul>
 			<li>Why is search function important?</li>
 			<li>What problem are we trying to solve?</li>
@@ -64,7 +64,11 @@
 			<li>How does this function benefit SAP?</li>
 			<li>What business opportunity does it create?</li>
 		</ul>
-	</p>	
+	</p>
+	<p>After researching SAP Store and SPA AppCenter, I found the answers to the questions: <br> 
+	     <strong>The search function is the most straightforward method for users to find what they want</strong> among 100+ products on SAP Store and 1000+ products on SAP AppCenter. Although these two websites are highly related to each other, <strong>there's no way to navigate from one to the other.</strong> Thus, by combing SAP Store and SAP AppCenter, <strong>it saves time and effort for customers to find products in one place instead of two</strong>. For SAP, <strong>it saves the cost of maintaining two individual websites.</strong> Moreover, <strong>there's an opportunity to promote related products which lead to revenue rising.</strong> </p>
+
+
 </section>
 
 
