--- a/index.html
+++ b/index.html
@@ -197,21 +197,9 @@
 							</div>
 						</div></a>
 
-
-						<div class="row">
+							<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/ob.svg); width: 101%;">
-							<a href="rackspace.html" ><div class="desc">
-									<div class="con">
-										<h1>ObjectRocket - a rackspace company</h1>
-										<span>UX Internship</span>
-									</div>
-								</div>
-							</div>
-						</div></a>
-						<div class="row">
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/sap.svg); width: 93%; margin-left: 7%">
+							<div class="project" style="background-image: url(images/sap.svg); width: 101%;">
 							<a href="sap.html" ><div class="desc">
 									<div class="con">
 										<h1>SAP Design Challenge</h1>
@@ -220,6 +208,20 @@
 								</div>
 							</div>
 						</div></a>
+
+
+						<div class="row">
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+							<div class="project" style="background-image: url(images/ob.svg); width: 93%; margin-left: 7%">
+							<a href="rackspace.html" ><div class="desc">
+									<div class="con">
+										<h1>ObjectRocket - a rackspace company</h1>
+										<span>UX Internship</span>
+									</div>
+								</div>
+							</div>
+						</div></a>
+					
 					
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
