add tracking code

--- a/parkking.html
+++ b/parkking.html
@@ -21,6 +21,15 @@
     <script type="text/javascript" src="work/js/wow.js"></script>
     <script type="text/javascript" src="work/js/main.js"></script>
     
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-133732271-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-133732271-1');
+</script>
 
 
 
