--- a/qeesi.html
+++ b/qeesi.html
@@ -22,6 +22,15 @@
     <script type="text/javascript" src="work/js/main.js"></script>
     
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-133732271-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-133732271-1');
+</script>
 
 
 </head>
@@ -64,7 +73,7 @@
 </div>
 
 	<h2>Process & Outcome</h2>
-	<p class="text-center">If the images in Figma is pixelated, <a href="https://utexas.box.com/v/qeesibyericchi" target="blank">here's a pdf version</a></p>
+	<p class="text-center">If the images in Figma are pixelated, <a href="https://utexas.box.com/v/qeesibyericchi" target="blank">here's a pdf version</a></p>
 
 <div style="margin-left:10%;">
 
