--- a/blushup.html
+++ b/blushup.html
@@ -23,6 +23,16 @@
 	<link href='https://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
     <script src="https://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>    
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-133732271-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-133732271-1');
+</script>
+
 
 
 </head>
