--- a/franklin.html
+++ b/franklin.html
@@ -38,7 +38,7 @@
 
 	<section class="billboard dark">
 		<header>
-			<a href="index.html#work"><img class="logo" src="work/img/eric.svg" alt=""/></a>
+			<a href="index.html#work"><img class="logo" src="favicon.png" alt=""/></a>
 			
 		</header>
 
