--- a/parkking.html
+++ b/parkking.html
@@ -38,7 +38,7 @@
 
 	<section class="billboard light">
 		<header>
-			<a href="index.html#work"><img class="logo" src="images/eric-white.svg" alt=""/></a>
+			<a href="index.html#work"><img class="logo" src="favicon.png" alt=""/></a>
 			
 		</header>
 
