--- a/rackspace.html
+++ b/rackspace.html
@@ -40,7 +40,7 @@
 
 	<section class="billboard light">
 		<header>
-			<a href="index.html#work"><img class="logo" src="work/img/eric.svg" alt=""/></a>
+			<a href="index.html#work"><img class="logo" src="favicon.png" alt=""/></a>
 			
 		</header>
 
