--- a/index.html
+++ b/index.html
@@ -186,8 +186,20 @@
 					</div>
 					
 					<div class="row">
+
+						<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/petwin.png); ">
+							<div class="project" style="background-image: url(images/sap.svg); margin-left: 3.5%; width: 96.5%">
+							<a href="sap.html" ><div class="desc">
+									<div class="con">
+										<h1>SAP Design Challenge</h1>
+										<span>Experience for search</span>
+									</div>
+								</div>
+							</div>
+						</div></a>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+							<div class="project" style="background-image: url(images/petwin.png); width: 101%; ">
 							<a href="https://medium.com/@ycchi/petwin-from-shelter-to-home-e2ee4c2fde09" target="blank"><div class="desc">
 									<div class="con">
 										<h1>Petwin</h1>
@@ -197,17 +209,7 @@
 							</div>
 						</div></a>
 
-							<div class="row">
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/sap.svg); width: 101%;">
-							<a href="sap.html" ><div class="desc">
-									<div class="con">
-										<h1>SAP Design Challenge</h1>
-										<span>Experience for search</span>
-									</div>
-								</div>
-							</div>
-						</div></a>
+							
 
 
 						<div class="row">
