--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 									<i class="icon-mail"></i>
 								</div>
 								<div class="colorlib-text">
-									<a href="mailto:chiyyyy@utexas.edu"><p class="contact-text">chiyyyy@utexas.edu</p></a>
+									<a href="mailto:chiyyyy@utexas.edu"><p class="contact-text">eric.ycchi@gmail.com</p></a>
 								</div>
 							</div>
 
