--- a/sap.html
+++ b/sap.html
@@ -154,7 +154,7 @@
 	<h2>Ideation</h2>
 	<p>I sketched out several possible solutions that fit in the defined tasks. Without time to do further research,  I decided to go with <strong>dropdown</strong> and <strong>suggestions.</strong></p>
 	<img src="work/img/sap-ideation.svg">
-	<p>Dropdown not only changes the search experience slightly but also adds value. With the input from the dropdown, SAP can narrow down the results accurately. Moreover, suggestions are similar to the current experience that customers are already familiar with, so the learning curve of new designs can be minimized.</p>
+	<p>Dropdown not only changes the search experience slightly but also adds value. With the input from the dropdown, SAP can narrow down the results into specific categories accurately. Moreover, suggestions are similar to the current experience that customers are already familiar with, so the learning curve of new designs can be minimized.</p>
 
 	<h2 class="margin-bottom">Wireframes</h2>
 	</section>
