--- a/franklin.html
+++ b/franklin.html
@@ -72,7 +72,7 @@
   </div>
 </div>
 
-	<h2>Problem Spaces</h2>
+	<h2>Problem Space</h2>
 	<div class="text-center"><img class="problem-img" src="work/img/conversation.png" class="img-fluid" alt=""></div><br>
 	<p>According to our research, there are two big gaps between the user's expectations and current language learning tools. <br><br>
 Firstly, <strong>the lack of real-world context makes language learning impractical</strong>. A person knowing how to pronounce and the definition of a word doesn't mean that he/she knows how to use a word in daily life. Users could've spent tons of time on language learning tools but couldn't apply what they have learned at the moment they need it the most. 
