--- a/parkking.html
+++ b/parkking.html
@@ -73,7 +73,7 @@
 </div>
 
 
-<h2>Problem Spaces</h2>
+<h2>Problem Space</h2>
 
 
 <img class="problem-img" src="work/img/mobile-map.png" class="img-fluid" alt=""><p><strong>Distracted driving is dangerous, and cell phone use while driving is a major factor.</strong> Although most drivers use navigation apps on their phones, it could be dangerous because drivers get distracted by their phone call, messages, and other notifications. According to The National Highway Traffic Safety Administration,  driver distraction is the cause of 25-30% of all roadway accidents in the U.S every year.</p>
