--- a/parkking.html
+++ b/parkking.html
@@ -106,7 +106,7 @@
   <ul>
     
     <li><a href="index.html#work">More Projects</a></li>
-    <li><a href="mailto:chiyyyy@utexas.edu">Email</a></li>
+    <li><a href="mailto:eric.ycchi@gmail.com">Email</a></li>
     <li><a href="https://drive.google.com/file/d/1fuzmwio_-1LKzmdl5jNvgbxmhACbG5jL/view" target="blank">Resume</a></li>
     <li><a href="https://www.linkedin.com/in/ycchi/" target="blank">LinkedIn</a></li>
     <li>
