--- a/franklin.html
+++ b/franklin.html
@@ -102,7 +102,7 @@ Secondly, <strong>nothing would be more helpful than personalized feedback and e
   <ul>
     
     <li><a href="index.html#work">More Projects</a></li>
-    <li><a href="mailto:chiyyyy@utexas.edu">Email</a></li>
+    <li><a href="mailto:eric.ycchi@gmail.com">Email</a></li>
     <li><a href="https://drive.google.com/file/d/1fuzmwio_-1LKzmdl5jNvgbxmhACbG5jL/view" target="blank">Resume</a></li>
     <li><a href="https://www.linkedin.com/in/ycchi/" target="blank">LinkedIn</a></li>
     <li>
