--- a/sap.html
+++ b/sap.html
@@ -54,6 +54,7 @@
 
 	<section class="main-content">
 		<h2>Overview</h2>
+		<p>As part of the interview for SAP UX Designer, I was challenged to design a search experience by merging two individual websites into one for customers. </p>
 		<div class="container text-center">
   		<div class="row">
     <div class="col">
@@ -238,7 +239,7 @@
   <ul>
     
     <li><a href="index.html#work">More Projects</a></li>
-    <li><a href="mailto:chiyyyy@utexas.edu">Email</a></li>
+    <li><a href="mailto:eric.ycchi@gmail.com">Email</a></li>
     <li><a href="https://drive.google.com/file/d/1fuzmwio_-1LKzmdl5jNvgbxmhACbG5jL/view" target="blank">Resume</a></li>
     <li><a href="https://www.linkedin.com/in/ycchi/" target="blank">LinkedIn</a></li>
     <li>
