--- a/sap.html
+++ b/sap.html
@@ -171,6 +171,8 @@
 	</div>
 	<div class="col-md-4">
 		<div style="margin-top: 20px;">
+			<span>Search Suggestions</span>
+		<br><br>
 		<img src="work/img/sap-annotation1.svg">
 		<span> Filter for all, sap product and partner product</span>
 		<br><br>
@@ -194,6 +196,8 @@
 	</div>
 	<div class="col-md-4">
 		<div style="margin-top: 20px;">
+		<span>Search Results</span>
+		<br><br>
 			<img src="work/img/sap-annotation1.svg">
 		<span>Sticky when scrolling</span>
 		<br><br>
