--- a/franklin.html
+++ b/franklin.html
@@ -62,8 +62,8 @@
       <p>UX/Product Designer</p>
     </div>
     <div class="col">
-      <p class="role">Timeline</p>
-      <p>January - May 2019
+      <p class="role">Duration</p>
+      <p>12 Weeks</p>
     </div>
     <div class="col">
       <p class="role">Platform</p>
