--- a/parkking.html
+++ b/parkking.html
@@ -62,8 +62,8 @@
       <p>UX/Product Designer</p>
     </div>
     <div class="col">
-      <p class="role">Timeline</p>
-      <p>August - December 2019
+      <p class="role">Duration</p>
+      <p>10 Weeks</p>
     </div>
     <div class="col">
       <p class="role">Platform</p>
