--- a/rackspace.html
+++ b/rackspace.html
@@ -65,7 +65,7 @@
     </div>
     <div class="col">
       <p class="role">Timeline</p>
-      <p>May - August 2019
+      <p>12 Weeks</p>
     </div>
     <div class="col">
       <p class="role">Company</p>
