--- a/blushup.html
+++ b/blushup.html
@@ -63,8 +63,8 @@
       <p>UI/UX Designer</p>
     </div>
     <div class="col">
-      <p class="role">Timeline</p>
-      <p>January - May 2019
+      <p class="role">Duration</p>
+      <p>13 Weeks</p>
     </div>
     <div class="col">
       <p class="role">Company</p>
