--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 					<ul>
 						<!-- <li class="active"><a href="#" data-nav-section="home">Home</a></li> -->
 						<li class="active"><a href="#" data-nav-section="about">About</a></li>
-						<li><a href="#" data-nav-section="work">Work</a></li>
+						<li><a href="#" data-nav-section="work">Works</a></li>
 						<li><a href="#" data-nav-section="resume">Resume</a></li>
 						<li><a href="#" data-nav-section="contact">Contact</a></li>
 					</ul>
