--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 
-<!--Hi there, thank you for stopped by here. Hope you enjoy my portfolio! Shoot me an email if you have any feedback or thoughts: chiyyyy@utexas.edu  -->
+<!--Hi there, thank you for stopped by here. I have some cool stuff for you to discover. How about try the link in about section 😏. If you have any questions or feedback, please feel free to reach out. Have a good day! -->
 
 
 	<head>
