--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <!-- Facebook and Twitter integration -->
 	<meta property="og:title" content="Eric Chi; UI UX Design"/>
-	<meta property="og:image" content=""/>
+	<meta property="og:image" content="images/img_bg_1"/>
 	<meta property="og:url" content="ycchi.com"/>
 	<meta property="og:site_name" content="Eric's Portfolio"/>
 	<meta property="og:description" content="Come here to know more about Eric Chi"/>
