--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 	<meta property="og:site_name" content="Eric's Portfolio"/>
 	<meta property="og:description" content="Come here to know more about Eric Chi"/>
 	<meta name="twitter:title" content="Portfolio" />
-	<meta name="twitter:image" content="" />
+	<meta name="twitter:image" content="images/img_bg_1" />
 	<meta name="twitter:url" content="ycchi.com" />
 	<meta name="twitter:card" content="" />
+	<meta itemprop="thumbnailUrl" content="images/img_bg_1"/>
 
     <link rel="icon" type="image/png" href="favicon.png" sizes="16x16">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
