--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	<meta name="twitter:url" content="ycchi.com" />
 	<meta name="twitter:card" content="" />
 	<meta itemprop="thumbnailUrl" content="images/img_bg_1"/>
+	<link rel="image_src" href="images/img_bg_1" />
 
     <link rel="icon" type="image/png" href="favicon.png" sizes="16x16">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
