--- a/index.html
+++ b/index.html
@@ -15,16 +15,14 @@
 
   <!-- Facebook and Twitter integration -->
 	<meta property="og:title" content="Eric Chi; UI UX Design"/>
-	<meta property="og:image" content="images/img_bg_1"/>
+	<meta property="og:image" content="https://uploads-ssl.webflow.com/5dd473c5b98acb7d8626f98c/5edeaf0419badb6ba296821e_Artboard.png"/>
 	<meta property="og:url" content="ycchi.com"/>
 	<meta property="og:site_name" content="Eric's Portfolio"/>
 	<meta property="og:description" content="Come here to know more about Eric Chi"/>
 	<meta name="twitter:title" content="Portfolio" />
 	<meta name="twitter:image" content="images/img_bg_1" />
 	<meta name="twitter:url" content="ycchi.com" />
-	<meta name="twitter:card" content="" />
-	<meta itemprop="thumbnailUrl" content="images/img_bg_1"/>
-	<link rel="image_src" href="images/img_bg_1" />
+
 
     <link rel="icon" type="image/png" href="favicon.png" sizes="16x16">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
