--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <!-- Facebook and Twitter integration -->
 	<meta property="og:title" content="Eric Chi; UI UX Design"/>
-	<meta property="og:image" content="https://uploads-ssl.webflow.com/5dd473c5b98acb7d8626f98c/5edeaf0419badb6ba296821e_Artboard.png"/>
+	<meta property="og:image" content="https://raw.githubusercontent.com/chiy3/portfolio/master/images/img_bg_1.jpg"/>
 	<meta property="og:url" content="ycchi.com"/>
 	<meta property="og:site_name" content="Eric's Portfolio"/>
 	<meta property="og:description" content="Come here to know more about Eric Chi"/>
