--- a/index.html
+++ b/index.html
@@ -20,9 +20,14 @@
 	<meta property="og:site_name" content="Eric's Portfolio"/>
 	<meta property="og:description" content="Come here to know more about Eric Chi"/>
 	<meta name="twitter:title" content="Portfolio" />
-	<meta name="twitter:image" content="images/img_bg_1" />
+	<meta name="twitter:image" content="Eric Chi; UI UX Design"/>
+	<meta property="og:image" content="https://raw.githubusercontent.com/chiy3/portfolio/master/images/img_bg_1.jpg" />
 	<meta name="twitter:url" content="ycchi.com" />
 
+	<meta itemprop="thumbnailUrl" content="Eric Chi; UI UX Design"/>
+	<meta property="og:image" content="https://raw.githubusercontent.com/chiy3/portfolio/master/images/img_bg_1.jpg"/>
+	<link rel="image_src" href="Eric Chi; UI UX Design"/>
+	<meta property="og:image" content="https://raw.githubusercontent.com/chiy3/portfolio/master/images/img_bg_1.jpg" />
 
     <link rel="icon" type="image/png" href="favicon.png" sizes="16x16">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
