--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
 
   <!-- Facebook and Twitter integration -->
 	<meta property="og:title" content="Eric Chi; UI UX Design"/>
-	<meta property="og:image" content="https://raw.githubusercontent.com/chiy3/portfolio/master/images/img_bg_1.jpg"/>
+	<meta property="og:image" content="http://static1.squarespace.com/static/58a2276646c3c4522f79ca71/t/5e8650a2226c066acaa519ab/1585860776393/Untitled_Artwork.png?format=1500w"/>
 	<meta property="og:url" content="ycchi.com"/>
 	<meta property="og:site_name" content="Eric's Portfolio"/>
 	<meta property="og:description" content="Come here to know more about Eric Chi"/>
 	<meta name="twitter:title" content="Portfolio" />
 	<meta name="twitter:image" content="Eric Chi; UI UX Design"/>
-	<meta property="og:image" content="https://raw.githubusercontent.com/chiy3/portfolio/master/images/img_bg_1.jpg" />
+	<meta property="og:image" content="http://static1.squarespace.com/static/58a2276646c3c4522f79ca71/t/5e8650a2226c066acaa519ab/1585860776393/Untitled_Artwork.png?format=1500w" />
 	<meta name="twitter:url" content="ycchi.com" />
 
 	<meta itemprop="thumbnailUrl" content="Eric Chi; UI UX Design"/>
-	<meta property="og:image" content="https://raw.githubusercontent.com/chiy3/portfolio/master/images/img_bg_1.jpg"/>
-	<link rel="image_src" href="Eric Chi; UI UX Design"/>
-	<meta property="og:image" content="https://raw.githubusercontent.com/chiy3/portfolio/master/images/img_bg_1.jpg" />
+	<meta property="og:image" content="http://static1.squarespace.com/static/58a2276646c3c4522f79ca71/t/5e8650a2226c066acaa519ab/1585860776393/Untitled_Artwork.png?format=1500w"/>
+	<link rel="image_src" href="http://static1.squarespace.com/static/58a2276646c3c4522f79ca71/t/5e8650a2226c066acaa519ab/1585860776393/Untitled_Artwork.png?format=1500w"/>
+	
 
     <link rel="icon" type="image/png" href="favicon.png" sizes="16x16">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet">
