--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 	<meta name="author" content="Eric Chi" />
 
   <!-- Facebook and Twitter integration -->
-	<meta property="og:title" content="Eric Chi; UI UX Design"/>
+	<meta property="og:title" content="Eric Chi's Portfolio"/>
 	<meta property="og:image" content="images/img_bg_1.jpg"/>
 	<meta property="og:url" content="ycchi.com"/>
 	<meta property="og:site_name" content="Eric's Portfolio"/>
-	<meta property="og:description" content="Come here to know more about Eric Chi"/>
+	<meta property="og:description" content="A place to know more about Eric Chi"/>
 	<meta name="twitter:title" content="Portfolio" />
 	<meta name="twitter:image" content="Eric Chi; UI UX Design"/>
 	
