--- a/sap.html
+++ b/sap.html
@@ -54,7 +54,7 @@
 
 	<section class="main-content">
 		<h2>Overview</h2>
-		<p>As part of the interview for SAP UX Designer, I was challenged to design a search experience by merging two individual websites into one for customers. </p>
+		<p>As part of the interview for SAP UX Designer, I was challenged to design a search experience by merging two independent websites into one for SAP customers. </p>
 		<div class="container text-center">
   		<div class="row">
     <div class="col">
