--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
 
 			<div class="colorlib-footer">
 				
-				<ul>
+			<!-- 	<ul>
 					<li><a href="https://www.facebook.com/profile.php?id=100002158816472" target="blank"><i class="icon-facebook2"></i></a></li>
 					<li><a href="https://www.instagram.com/ericychii/" target="blank"><i class="icon-instagram"></i></a></li>
 					<li><a href="https://www.linkedin.com/in/ycchi/" target="blank"><i class="icon-linkedin2"></i></a></li>
 					<li><a href="https://dribbble.com/ycchi" target="blank"><i class="icon-dribbble2"></i></a></li>
-				</ul>
+				</ul> -->
 
 				<p class="contact-text"><small>Made with <a href="https://colorlib.com" target="_blank">💙</a> </a></span></small></p>
 
@@ -325,18 +325,20 @@
 									<i class="icon-mail"></i>
 								</div>
 								<div class="colorlib-text">
-									<a href="mailto:chiyyyy@utexas.edu"><p class="contact-text">eric.ycchi@gmail.com</p></a>
+									<a href="mailto:eric.ycchi@gmail.com"><p class="contact-text">eric.ycchi@gmail.com</p></a>
 								</div>
 							</div>
 
 							<div class="colorlib-feature colorlib-feature-sm" data-animate-effect="">
 								<div class="colorlib-icon">
-									<i class="icon-phone"></i>
+									<i class="icon-social-linkedin"></i>
 								</div>
 								<div class="colorlib-text">
-									<a href="tel:5122010220"><p class="contact-text">512-201-0220</p></a>
+									<a href="https://www.linkedin.com/in/ycchi/" target="_blank"><p class="contact-text">linkedin.com/in/ycchi</p></a>
 								</div>
 							</div>
+
+							
 
 							<div class="colorlib-feature colorlib-feature-sm" data-animate-effect="">
 								<div class="colorlib-icon">
