--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3" data-animate-effect="">
-							<span class="heading-meta">Contact me</span>
+							<span class="heading-meta">Contact Info</span>
 							<h2 class="colorlib-heading"></h2>
 						</div>
 					</div>
