--- a/qeesi.html
+++ b/qeesi.html
@@ -73,7 +73,7 @@
 </div>
 
 	<h2>Process & Outcome</h2>
-	<p class="text-center">If the images in Figma are pixelated, <a href="https://utexas.box.com/v/qeesibyericchi" target="blank">here's a pdf version</a></p>
+	<p class="text-center">If the images in Figma are pixelated, <a href="https://utexas.box.com/v/qeesibyericc" target="blank">here's a pdf version</a></p>
 
 <div style="margin-left:10%;">
 
