--- a/qeesi.html
+++ b/qeesi.html
@@ -63,7 +63,7 @@
     </div>
     <div class="col">
       <p class="role">Timeline</p>
-      <p>12 Weeks</p>
+      <p>8 weeks</p>
     </div>
     <div class="col">
       <p class="role">Company</p>
