--- a/qeesi.html
+++ b/qeesi.html
@@ -73,11 +73,12 @@
 </div>
 
 	<h2>Process & Outcome</h2>
-	<p class="text-center">If the images in Figma are pixelated, <a href="https://utexas.box.com/v/qeesibyericc" target="blank">here's a pdf version</a></p>
+	<!-- <p class="text-center">If the images in Figma are pixelated, <a href="https://utexas.box.com/v/qeesibyericc" target="blank">here's a pdf version</a></p> -->
 
 <div style="margin-left:10%;">
 
-	<iframe style="border: none;" width="90%" height="800px" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FlVwBeHZbwUTR3sp8zm5oUe%2FQeesi-Presentation%3Fnode-id%3D0%253A2%26viewport%3D314%252C332%252C0.09858471900224686%26scaling%3Dcontain" allowfullscreen></iframe>
+	<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="90%" height="800" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F5cWyjDKde4k3IrxmHOfuuD%2FNew-Qeesi-full-ver.%3Fnode-id%3D867%253A53%26viewport%3D-100%252C1661%252C0.15932117402553558%26scaling%3Dcontain&chrome=DOCUMENTATION" allowfullscreen></iframe>
+
 </div>
 
 	</section>
