--- a/parkking.html
+++ b/parkking.html
@@ -78,10 +78,10 @@
 
 <img class="problem-img" src="work/img/mobile-map.png" class="img-fluid" alt=""><p><strong>Distracted driving is dangerous, and cell phone use while driving is a major factor.</strong> Although most drivers use navigation apps on their phones, it could be dangerous because drivers get distracted by their phone call, messages, and other notifications. According to The National Highway Traffic Safety Administration,  driver distraction is the cause of 25-30% of all roadway accidents in the U.S every year.</p>
 <br>
-<img class="problem-img" src="work/img/map-placeholder.png" class="img-fluid" alt=""><p><strong>Navigation apps are not clear enough for drivers, especially for the novices.</strong> The arrows on the map are unintuitive when it comes to complicated intersections or frontage roads; The voice direction does not adjust with realtime traffic, etc. Drivers are easy to lose due to the disadvantages of navigation apps.</p>
+<img class="problem-img" src="work/img/map-placeholder.png" class="img-fluid" alt=""><p><strong>Navigation apps are not clear enough for drivers.</strong> For example, the arrows on the map are unintuitive when it comes to complicated intersections or frontage roads and the voice direction does not adjust with realtime traffic. Drivers are easy to get confused and distracted due to the disadvantages of navigation apps.</p>
 <br>
 
-<img class="problem-img" src="work/img/bicycle-parking.png" class="img-fluid" alt=""><p><strong>Parking is a horrible nightmare.</strong> During rush hours or weekends, it's almost impossible to find a parking lot in downtown or shopping mall. According to USA Today, people in the U.S spend an average of 17 hours a year on finding a parking space. In the hard-hit U.S. urban area like NYC, drivers on average spend 107 hours a year looking for parking spots</p>
+<img class="problem-img" src="work/img/bicycle-parking.png" class="img-fluid" alt=""><p><strong>Parking is a horrible nightmare.</strong> During rush hours or weekends, it's almost impossible to find a parking lot in downtown or shopping mall. According to USA Today, people in the U.S spend an average of 17 hours a year on finding a parking space. In the hard-hit U.S. urban area like NYC, drivers on average spend 107 hours a year looking for parking spots.</p>
 
 
 	<h2>Parkking Conceptual Video</h2>
