update sap and blushup

--- a/sap.html
+++ b/sap.html
@@ -63,7 +63,7 @@
     </div>
     <div class="col">
       <p class="role">Duration</p>
-      <p>5 hours</p>
+      <p>1 day</p>
     </div>
     <div class="col">
       <p class="role">Tools</p>
