add blushup process

--- a/blushup.html
+++ b/blushup.html
@@ -54,7 +54,7 @@
 
 	<section class="main-content">
 		<h2>Overview</h2>
-		<p>Blushup is a startup company in New York City and it is an online platform for customers to reserve in-store makeup. As a UI/UX designer, I worked closely with the CEO and the CTO to redesign our new platform. However, due to NDA, I'm only able to show a quick preview of my design. Please hit me up and I am more than happy to share details with you!</p>
+		<p>Blushup is a startup company in New York City and it is an online platform for customers to reserve in-store makeup. As a UI/UX designer, I worked closely with the CEO and the CTO to redesign our new platform with new features. However, due to NDA, I'm only able to show a quick preview of my design. Please hit me up and I am more than happy to share details with you!</p>
 		
 		<div class="container text-center">
   		<div class="row">
@@ -72,6 +72,12 @@
     </div>
   </div>
 </div>
+
+<h2>Process</h2>
+<div class="text-center">
+<img style="margin-top: 40px; width: 70%;" src="work/img/blushup-process.svg">
+</div>
+
 
 		<h2>Redesign Preview</h2>
 
