--- a/qeesi1.html
+++ b/qeesi1.html
@@ -53,7 +53,7 @@
 	<section class="main-content">
 
 	<h2>Overview</h2>
-	<p>Qeesi is a questionnaire that helps patients to identify multiple chemical intolerances and it used to be paper-based. Through time, the Qeesi team migrated it from paper to website. Now, the Qeesi team is looking for a redesign to improve the online version of Qeesi.</p>
+	<p>Qeesi is a questionnaire that helps patients to identify multiple chemical intolerances and it used to be paper-based. Through time, the Qeesi team migrated it from paper to digital world and they were looking for a redesign to improve the online version of Qeesi.</p>
 	
 	<div class="container text-center">
   <div class="row">
@@ -72,14 +72,29 @@
   </div>
 </div>
 
-	<h2>Process & Outcome</h2>
-	<!-- <p class="text-center">If the images in Figma are pixelated, <a href="https://utexas.box.com/v/qeesibyericc" target="blank">here's a pdf version</a></p> -->
+	<h2>Process & Preview</h2>
+	<div class="text-center">
+	<img src="work/img/qeesi-process.svg">
+	</div>
 
-<div style="margin-left:10%;">
+	<div style="height: 100px;"></div>
+	<div class="row">
+		<div class="col">
+			<p class="preview-text">We made exposure testing <span class="highlighted">easier</span> and <span class="highlighted">faster</span></p>
+			<div style="height: 30px;"></div>
+			<p class="preview-text">System Usability Score increases by <span class="highlighted">106.5%</span></p>
+			<p class="preview-text">Success Rate increases by <span class="highlighted">150%</span></p>
+			<p class="preview-text">Completion Time decreases by <span class="highlighted">31%</span></p>
+			
 
-	<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="90%" height="600" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F5cWyjDKde4k3IrxmHOfuuD%2FNew-Qeesi-full-ver.%3Fnode-id%3D867%253A53%26viewport%3D-100%252C1661%252C0.15932117402553558%26scaling%3Dcontain&chrome=DOCUMENTATION" allowfullscreen></iframe>
+		</div>
+		<div class="col">
+			<div class="text-right">
+				<img src="work/img/qeesi-preview.svg">
+			</div>
+	</div>
 
-</div>
+
 
 	</section>
 	
