--- a/QEESI/qeesi.html
+++ b/QEESI/qeesi.html
@@ -1,12 +1,21 @@
 ﻿<!DOCTYPE html>
 <html>
   <head>
-    <title>qeesi</title>
+    <title>Qeesi | Eric Chi's Portfolio</title>
+    <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="HandheldFriendly" content="true">
+  <meta name="author" content="Eric Chi">
+  <meta name="description" content="ui ux QEESI redesign design research designer Eric Chi"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <link href="resources/css/axure_rp_page.css" type="text/css" rel="stylesheet"/>
     <link href="data/styles.css" type="text/css" rel="stylesheet"/>
     <link href="files/qeesi/styles.css" type="text/css" rel="stylesheet"/>
+    <link rel="icon" type="image/png" href="favicon.png" sizes="16x16">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Give+You+Glory&family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link href="" type="text/css" rel="stylesheet"/>
     <script src="resources/scripts/jquery-3.2.1.min.js"></script>
     <script src="resources/scripts/axure/axQuery.js"></script>
