--- a/QEESI/qeesi.html
+++ b/QEESI/qeesi.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
   <head>
-    <title>Qeesi | Eric Chi's Portfolio</title>
+     <title>Qeesi | Eric Chi's Portfolio</title>
     <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -10,14 +10,12 @@
   <meta name="description" content="ui ux QEESI redesign design research designer Eric Chi"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+     <link rel="icon" type="image/png" href="favicon.png" sizes="16x16">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Give+You+Glory&family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link href="resources/css/axure_rp_page.css" type="text/css" rel="stylesheet"/>
     <link href="data/styles.css" type="text/css" rel="stylesheet"/>
     <link href="files/qeesi/styles.css" type="text/css" rel="stylesheet"/>
-    <link rel="icon" type="image/png" href="favicon.png" sizes="16x16">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Give+You+Glory&family=Lato:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link href="" type="text/css" rel="stylesheet"/>
     <script src="resources/scripts/jquery-3.2.1.min.js"></script>
     <script src="resources/scripts/axure/axQuery.js"></script>
     <script src="resources/scripts/axure/globals.js"></script>
@@ -655,7 +653,7 @@
       <div id="u80" class="ax_default paragraph">
         <div id="u80_div" class=""></div>
         <div id="u80_text" class="text ">
-          <p><span style="font-family:'Lato-Bold', 'Lato Bold', 'Lato', sans-serif;font-weight:700;">- Heuristic Evaluation</span></p><p><span style="font-family:'Lato-Regular', 'Lato', sans-serif;font-weight:400;">Goal: Define potential gaps and usability issues </span></p><p><span style="font-family:'Lato-Regular', 'Lato', sans-serif;font-weight:400;">How: We followed Jakob Nielsen's 10 general principles to perform the evaluation individually and prioritize the findings as a team.</span></p><p><span style="font-family:'Lato-Regular', 'Lato', sans-serif;font-weight:400;"><br></span></p><p><span style="font-family:'Lato-Bold', 'Lato Bold', 'Lato', sans-serif;font-weight:700;">- Competitive Analysis</span></p><p><span style="font-family:'Lato-Regular', 'Lato', sans-serif;font-weight:400;">Goal: Understand user's expectations and audit other solutions</span></p><p><span style="font-family:'Lato-Regular', 'Lato', sans-serif;font-weight:400;">How: We analyzed 6 different online questionnaires to deeply understand their goals and how do they help users to achieve their goals. 3 of them were medical/healthcare-related, the other 3 were general-purpose. </span></p>
+          <p><span style="font-family:'Lato-Bold', 'Lato Bold', 'Lato', sans-serif;font-weight:700;">- Heuristic Evaluation</span></p><p><span style="font-family:'Lato-Regular', 'Lato', sans-serif;font-weight:400;">Goal: Define potential gaps and usability issues </span></p><p><span style="font-family:'Lato-Regular', 'Lato', sans-serif;font-weight:400;">How: We followed Jakob Nielsen's 10 general principles to perform the evaluation individually and prioritize the findings as a team</span></p><p><span style="font-family:'Lato-Regular', 'Lato', sans-serif;font-weight:400;"><br></span></p><p><span style="font-family:'Lato-Bold', 'Lato Bold', 'Lato', sans-serif;font-weight:700;">- Competitive Analysis</span></p><p><span style="font-family:'Lato-Regular', 'Lato', sans-serif;font-weight:400;">Goal: Understand user's expectations and audit other solutions</span></p><p><span style="font-family:'Lato-Regular', 'Lato', sans-serif;font-weight:400;">How: We analyzed 6 different online questionnaires to deeply understand their goals and how do they help users to achieve their goals. 3 of them were medical/healthcare-related, the other 3 were general-purpose. </span></p>
         </div>
       </div>
 
@@ -1395,13 +1393,74 @@
       <div id="u177" class="ax_default paragraph">
         <div id="u177_div" class=""></div>
         <div id="u177_text" class="text ">
-          <p><span>Although this project ended when we handoff the design to the QEESI team, here are features can be added to make QEESI a better product.&nbsp; </span></p><p><span><br></span></p><p><span>- User Profile: Allow users to create a profile for accessing their past results and analysis</span></p><p><span>- Responsive Design: Ensure users can access QEESI from every kind of device</span></p>
+          <p><span>Although this project ended when we handoff the design to the QEESI team, here are features can be added to make QEESI a better product.&nbsp; </span></p><p><span><br></span></p><p><span>- User Profile: Allow users to create a profile for accessing their past results with analysis</span></p><p><span>- Responsive Design: Ensure users can access QEESI from every kind of device</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u178" class="ax_default paragraph">
+        <div id="u178_div" class=""></div>
+        <div id="u178_text" class="text ">
+          <p><span>Thank you for reading!</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Line) -->
+      <div id="u179" class="ax_default line">
+        <img id="u179_img" class="img " src="images/qeesi/u179.svg"/>
+        <div id="u179_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u180" class="ax_default paragraph">
+        <div id="u180_div" class=""></div>
+        <div id="u180_text" class="text ">
+          <p><span>👋</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u181" class="ax_default paragraph">
+        <div id="u181_div" class=""></div>
+        <div id="u181_text" class="text ">
+          <p><span>Resume</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u182" class="ax_default paragraph">
+        <div id="u182_div" class=""></div>
+        <div id="u182_text" class="text ">
+          <p><span>More Projects</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u183" class="ax_default paragraph">
+        <div id="u183_div" class=""></div>
+        <div id="u183_text" class="text ">
+          <p><span>Email</span></p><p><span><br></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u184" class="ax_default paragraph">
+        <div id="u184_div" class=""></div>
+        <div id="u184_text" class="text ">
+          <p><span>LinkedIn</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u185" class="ax_default shape">
+        <img id="u185_img" class="img " src="images/qeesi/u185.svg"/>
+        <div id="u185_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
         </div>
       </div>
     </div>
-
-
-
     <script src="resources/scripts/axure/ios.js"></script>
   </body>
 </html>
