--- a/QEESI/qeesi.html
+++ b/QEESI/qeesi.html
@@ -53,6 +53,15 @@
       $axure.utils.getOtherPath = function() { return 'resources/Other.html'; };
       $axure.utils.getReloadPath = function() { return 'resources/reload.html'; };
     </script>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133732271-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-133732271-1');
+</script>
   </head>
   <body>
     <div id="base" class="">
