--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 							<a href="/QEESI/qeesi.html" ><div class="desc">
 									<div class="con">
 										<h1>QEESI</h1>
-										<span>Redeisgn of digital questionnaire</span>
+										<span>Experience of digital questionnaire</span>
 									</div>
 								</div>
 							</div>
@@ -267,7 +267,7 @@
 							<a href="blushup.html"><div class="desc">
 									<div class="con">
 										<h1>Blushup</h1>
-										<span>Redesign of ecommerce platform</span>
+										<span>Experience of ecommerce platform</span>
 									</div>
 								</div>
 							</div>
