--- a/blushup.html
+++ b/blushup.html
@@ -46,7 +46,7 @@
 
 		<div class="caption light clearfix focus-in-contract-bck">
 			<h1>Blushup</h1>
-			<p>Redesign/UI/UX</p>
+			<p>Responsiveness/UI/UX</p>
 			<hr>
 		</div>
 		
