--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 						</div></a>
 						<div class="col-md-6" data-animate-effect="">
 							<div class="project" style="background-image: url(images/petwin.png); width: 101%; ">
-							<a href="https://medium.com/@ycchi/petwin-from-shelter-to-home-e2ee4c2fde09" target="blank"><div class="desc">
+							<a href="https://ycchi.medium.com/petwin-from-shelter-to-home-127f4558b620" target="blank"><div class="desc">
 									<div class="con">
 										<h1>Petwin</h1>
 										<span>Experience for pet adoption</span>
