--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 											<lottie-player src="https://assets5.lottiefiles.com/packages/lf20_vusmvenu.json" background="transparent" speed="0.7" style="width:200px; height: 200px;" loop autoplay></lottie-player>
 											</div>
 											<div class="col-md-9">
-										<p style="margin-top: 50px;">I'm Eric Chi, a UX Designer enjoying solving problem and  passionate about closing gaps between people.</p> 
+										<p style="margin-top: 50px;">I'm Eric Chi, a UX Designer creating work that positively impacts users’ lives and bridging gaps between people.</p> 
 											</div>
 										</div>
 									</div>
