--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 						</div></a>
 						<div class="col-md-6" data-animate-effect="">
 							<div class="project" style="background-image: url(images/petwin.png); width: 101%; ">
-							<a href="/Petwin/petwin.html" target="blank"><div class="desc">
+							<a href="/Petwin/petwin.html"><div class="desc">
 									<div class="con">
 										<h1>Petwin</h1>
 										<span>Experience for pet adoption</span>
