--- a/index.html
+++ b/index.html
@@ -138,13 +138,13 @@
 										<div class="aboutme">
 
 										<div class="row">
-											<div class="col-md-3">
+											<!-- <div class="col-md-3">
 											<lottie-player src="https://assets5.lottiefiles.com/packages/lf20_vusmvenu.json" background="transparent" speed="0.7" style="width:200px; height: 200px;" loop autoplay></lottie-player>
-											</div>
-											<div class="col-md-9">
-										<p style="margin-top: 50px;">I'm Eric Chi, currently a ux designer @Walmart serving customers to save money and live better. Previously @Cisco and @Rackspace.</p> 
-											</div>
-										</div>
+											</div> -->
+											<!-- <div class="col-md-9"> -->
+										<p style="margin-top: 50px;">I'm Eric Chi, currently a ux designer @Walmart serving customers to save money and live better. Previously @Cisco and @Rackspace. Feel free to shoot me a message!</p> 
+											<!-- </div>
+										</div> -->
 									</div>
 								</div>
 							</div>
