--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 											<lottie-player src="https://assets5.lottiefiles.com/packages/lf20_vusmvenu.json" background="transparent" speed="0.7" style="width:200px; height: 200px;" loop autoplay></lottie-player>
 											</div> -->
 											<!-- <div class="col-md-9"> -->
-										<p style="margin-top: 50px;">I'm Eric Chi, currently a ux designer @Walmart serving customers to save money and live better. Previously @Cisco and @Rackspace. Feel free to shoot me a message!</p> 
+										<p style="margin-top: 50px;">I'm Eric Chi, currently a ux designer @Walmart serving customers to save money and live better. Previously @Cisco and @Rackspace. Please dm me to get the password of my works!</p> 
 											<!-- </div>
 										</div> -->
 									</div>
