--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
 						<div class="row">
 						<div class="col-md-6" data-animate-effect="">
-							<div class="project" style="background-image: url(images/walmart.png);">
+							<div class="project" style="background-image: url(images/walmart1.png);">
 							<!-- <a href="3"> --><div class="desc">
 									<div class="con">
 										<h1>Customer Care Platform</h1>
@@ -204,7 +204,7 @@
 						</div><!-- </a> -->
 
 						<div class="col-md-6" data-animate-effect="">
-							<div class="project" style="background-image: url(images/walmart.png);">
+							<div class="project" style="background-image: url(images/walmart1.png);">
 							<!-- <a href="#"> --><div class="desc">
 									<div class="con">
 										<h1>Knowledge Base Management System</h1>
@@ -270,7 +270,7 @@
 									<span class="heading-meta">Resume</span>
 									<h2 class="colorlib-heading"></h2>
 									<div class="hire">
-										<h2>Want to know more about me? <br> View my resume below!</h2>
+										<h2>Wanna learn more about my journey? <br> View my resume below!</h2>
 										<a href="https://drive.google.com/file/d/1fuzmwio_-1LKzmdl5jNvgbxmhACbG5jL/view?usp=sharing" class="btn-hire" target="blank">Take me there</a>
 									</div>
 								</div>
