--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 									<h2 class="colorlib-heading"></h2>
 									<div class="hire">
 										<h2>Wanna learn more about my journey? <br> View my resume below!</h2>
-										<a href="https://drive.google.com/file/d/1fuzmwio_-1LKzmdl5jNvgbxmhACbG5jL/view?usp=sharing" class="btn-hire" target="blank">Take me there</a>
+										<a href="https://drive.google.com/file/d/1HwHfpO_xEPReNohrsx-3AhslltdgL9_m/view" class="btn-hire" target="blank">Take me there</a>
 									</div>
 								</div>
 							</div>
